--- a/before-after.html
+++ b/before-after.html
@@ -518,6 +518,7 @@
     </script>
     <script>
       beforeEffectslider({
+        Selector: "#beforeEffectslider",
         BeforeImage:
           "https://v5.airtableusercontent.com/v3/u/25/25/1707321600000/WNjfyeTsyvx1EFvGqia3oQ/Olxu2MmhZn2WF3oETCaqrDs1quKD9Ul6maWuVOiWtztgP4hQYhIZ7wFkq-Sp63lbRb5nbRrZ4-Xkg9HVMmP2U3LCFsoWH5vS4dTNquUoN_w2QMMqlDL2sDOes0myoRuddaq8-6w5YVW6rTiTikiwBQ/0q_np5Jk5x04P4yYyiqMhg73mViVMXuGxh8CkK1nkRE",
         AfterImage:
